Bug 42925 - DEFAULT_ECHO_CANCELLER webrtc makes no sense if not compiled in
Summary: DEFAULT_ECHO_CANCELLER webrtc makes no sense if not compiled in
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-14 08:14 UTC by Peter Meerwald
Modified: 2011-11-14 23:24 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Meerwald 2011-11-14 08:14:04 UTC
module-echo-cancel.c has

#define DEFAULT_ECHO_CANCELLER "webrtc"

which leads to 

E: [lt-pulseaudio] module-echo-cancel.c: Invalid echo canceller implementation

when loading module-echo-cancel if webrtc is not compiled in and the AEC implementation is not specified

I suggest

#ifdef HAVE_WEBRTC
#define DEFAULT_ECHO_CANCELLER "webrtc"
#else
#define DEFAULT_ECHO_CANCELLER "speed"
#endif
Comment 1 Arun Raghavan 2011-11-14 23:24:56 UTC
Fixed now, thanks for reporting!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.